# project-gemini

./: .gitignore  pyproject.toml  requirements.txt
.cursor/plans/: hour-e1e2d807.plan.md
docs/: fr_arrivals_service.md  gemini_master_guide.md  kernel_plan.md
examples/: run_ground_jitter.py
prompts/: convection_polygons.1.md  convection_polygons.md
scripts/: demand_by_entry_counts_from_so6_with_entry_time.py  filter_for_strictly_better_routes.py
src/gemini/arr/: __init__.py  flight_metadata_provider.py  fr_arrival_moments_builder.py  fr_arrivals_cli.py  fr_arrivals_service.py  fr_artifacts_loader.py  fr_entry_probability.py
src/gemini/arrivals/: __init__.py  delay_assignment_gemini.py  flight_list_gemini.py  ground_hold_config.py  ground_hold_operator.py  ground_jitter_config.py  ground_jitter_operator.py  stochastic_traffic_count.py  type1_demand_store.py
src/gemini/gem/: README.md  __init__.py  arrival_moments.py  atfm_network.py  gem_service.py  hourly_kernel_table.py  regulation_plan.py
src/gemini/propagation/: __init__.py  compute_hourly_kernels_cli.py  compute_hourly_kernels_cli_dev_singlethread.py  compute_hourly_kernels_cli_mp.py  data_sources.py  domain_types.py  fr_traversal.py  hourly_kernel.py  routes.py  traversal_extractor.py  tvtw_indexer.py  volume_graph.py
tests/: conftest.py  test_ground_hold.py
tests/gem/: test_gem_service.py
wx/: convection_classifier.py  download_era5.py  visualize_convection_severity.ipynb
wx/recipes/: README.md  master_wx_plan.md
